assets/scss/main.scss
/* ... */
.home-software-tags {
    padding: 2rem 0;
    @include media-breakpoint-up(md) {
        padding: 5rem 0;
    }
    h1 {
        color: #17324D;
        margin: 1rem 0;
        @include media-breakpoint-up(md) {
            margin: 3.5rem 0;
        }
    }
    &__item {
        display: inline-block;
        margin-right: 0.5rem;
        margin-bottom: 1.5rem;
        a {
            border: 2px solid $primary;
            padding: 0.2rem 0.8rem;
            border-radius: 1rem;
            font-weight: 600;
            line-height: 1;
            text-decoration: none !important;
            &:hover {
                background-color: $primary;
                color: #fff;
            }
        }
    }
}

.banner-joinus {
    background-color: #004D99;
    background-image: url(/assets/images/credits-background-join.svg);
    background-position-x: center;
    background-position-y: center;
    background-repeat: no-repeat;
    h2 {
        font-size: 0.9rem;
        line-height: 1.2;
        color: #17324D;
        font-weight: 300;
        letter-spacing: 0;
        @include media-breakpoint-up(md) {
            font-size: 1.5rem;
        }
    }
    h1 {
        font-size: 2rem;
        line-height: 1.2;
        color: #17324D;
        @include media-breakpoint-up(md) {
            font-size: 2.5rem;
        }
    }
    &-window {
        display: none;
        position: absolute;
        top: -6.5rem;
        left: -5.5rem;
        z-index: 100;
        @include media-breakpoint-up(sm) {
            display: block;
        }
    }
    .icon {
        color: $primary;
        display: inline-block;
        font-size: 1rem;
        position: relative;
        line-height: 0;
        width: 2rem;
        height: 2rem;
        background-color: #fff;
        padding: 0.5rem;
        border-radius: 2rem;
        margin-left: 0.5rem;
    }
}

.layout-home .banner-joinus {
    &>.container {
        box-shadow: 0 10px 80px 0 rgba(90, 103, 114, 0.1);
    }
}

.simplelayout {
    &-main-image {
        background-color: #eee;
        position: absolute;
        width: 100%;
        min-height: 405px;
        display: grid;
    }
    &-main-image-container {
        max-width: 100%;
        height: auto;
        background-size: cover;
        background-repeat: no-repeat;
        background-position: center;
        margin: 0;
        @media (min-width: 1600px) {
            margin: 0 15%;
        }
    }
    &-first-part {
        background-color: #FAFBFD;
        background-image: url(/assets/images/simplelayout-background.svg);
        background-position-x: center;
        background-position-y: center;
        background-repeat: no-repeat;
        padding-bottom: 6rem;
    }
    &-main-text {
      position: relative;
      margin-top: 13rem;
      padding: 1rem;
      background-color: #fff;
      z-index: 10;
      box-shadow: 0 10px 80px 0 rgba(90,103,114,.1);
        h1 {
            font-size: 2.5rem;
            color: #17324D;
            @include media-breakpoint-up(md) {
                font-size: 3.5rem;
            }
        }
        &:before {
            position: absolute;
            top: calc(100% - 17rem); // 17 = 20rem - (-margin parent / 2)
            left: -3rem;
            border-left: 3rem solid #D6DEE8;
            border-bottom: 3rem solid #D6DEE8;
            z-index: -1;
            width: 20rem;
            height: 20rem;
            content: '';
            opacity: 0.5;
        }
        @include media-breakpoint-up(md) {
            padding: 4rem;
            margin-top: 18rem;
        }
        h2 {
            font-weight: 400;
            letter-spacing: 1px;
            color: #17324D;
            font-size: 1rem;
            text-transform: uppercase;
            @include media-breakpoint-up(md) {
                font-size: 1.5rem;
            }
        }
        h3 {
            margin-top: 2rem;
            margin-bottom: 1rem;
        }
    }
    &-main-content {
        font-family: $font-family-serif;
        font-size: 1.1rem;
        color: $gray-600;
    }
}

.alternateblock {
    h1 {
        font-size: 2rem;
        color: #17324D;
        @include media-breakpoint-up(md) {
            font-size: 3rem;
        }
    }
    &__text {
        color: #455B71;
    }
    .vertical-line {
        content: '';
        width: 1px;
        height: 100%;
        background-color: rgba(214, 222, 232, 0.5);
        position: absolute;
        left: 0;
        top: 0;
        z-index: -1;
        &.left-25 {
            left: 25%;
        }
        &.left-50 {
            left: 50%;
        }
        &.left-75 {
            left: 75%;
        }
        &.left-100 {
            left: 100%;
        }
    }
}

.pairblock {
    h1 {
        font-size: 1.8rem;
        color: #17324D;
        @include media-breakpoint-up(md) {
            font-size: 2.5rem;
        }
    }
    &__text {
        color: #455B71;
    }
    &__inner {
        width: 100%;
        @include media-breakpoint-up(lg) {
            width: 30vw;
            margin: 0 auto;
        }
    }
    article {
        position: relative;
        z-index: 1;
        &.odd {
            &:after {
                position: absolute;
                top: 0;
                right: 0;
                content: ' ';
                background-color: #FAFBFD;
                z-index: -1;
                width: 100%;
                height: 100%;
                @include media-breakpoint-up(md) {
                    width: 50vw;
                }
            }
        }
        &.even {
            &:after {
                position: absolute;
                top: 0;
                left: 0;
                content: ' ';
                background-color: #E5F1FC;
                z-index: -1;
                width: 100%;
                height: 100%;
                @include media-breakpoint-up(md) {
                    width: 50vw;
                }
            }
        }
    }
}
/* ... */

